# system-engineering-playbook

./: .gitignore  404.html  README.md  book.toml  drawio.html  index.html  md.html  print.html  searchindex.js  swagger.html  toc.html  toc.js
.github/workflows/: mdbook.yaml
_tools/mdbook-drawio/: Cargo.toml
_tools/mdbook-drawio/src/: main.rs
diagrams/: example.drawio
src/: SUMMARY.md  drawio.md  md.md  swagger.md  technical_specification.md
src/_assets/: custom.css
src/swagger/: swagger.html
swagger/: swagger.yaml
