[package]
name = "mdbook-drawio"
version = "0.1.0"
edition = "2021"

[dependencies]
mdbook = { version = "0.4.35", default-features = false }
regex = { version = "1.9.5", default-features = false, features = ["std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'